welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:6: error: '(' expected but identifier found.
  }while g<10
         ^lastDigit:9: error: '(' expected but identifier found.
  }while j<10
         ^